intento de subir

--- a/contacto.html
+++ b/contacto.html
@@ -209,7 +209,7 @@
 
     <!-- firma -->
     <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-      Felipe Moreno || Grupo 2 ||
+      Felipe Moreno y cia || Grupo 2 ||
       <a class="text-white" href="https://www.awakelab.cl" target="_blank">www.awakelab.cl</a>
     </div>
     <!-- firma -->
